[package]
name = "nintendo64-hal"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"
categories = ["development-tools"]
keywords = ["hal", "nintendo64", "n64", "embedded"]
description = "A hardware abstraction layer for the Nintendo 64."
repository = "https://github.com/icorbrey/nintendo64-hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nintendo64-pac = "0.1.0"
